--- a/texts.ini
+++ b/texts.ini
@@ -6,10 +6,18 @@
 
 place_question = "Is '%place%' a place in the UK?"
 
+; If a place is a REAL place, what answers should we consider as correct? Comma-separated list of possibilities.
 real_place_possible_answers = "yes, y"
+; Text to show as answer for real places in isolation (e.g. used in the web page's "Answer" column)
 real_place_isolated_answer = "Yes"
+; If a new question is generated and the previous question is unsolved and was for a real place, what text should
+; be included to inform users that the previous question was a real place? As seen in !q new
 real_place_resolution_text = "%place% is a real place!"
 
+; If a place is a FAKE place, what answers should we consider as correct? Comma-separated list of possibilities.
 fake_place_possible_answers = "no, n"
+; Text to show as answer for fake places in isolation (e.g. used in the web page's "Answer" column)
 fake_place_isolated_answer = "No"
+; If a new question is generated and the previous question is unsolved and was for a fake place, what text should
+; be included to inform users that the previous question was a fake place? As seen in !q new
 fake_place_resolution_text = "%place% is NOT a real place!"
