--- a/texts.ini
+++ b/texts.ini
@@ -5,7 +5,15 @@
 [places]
 
 place_question = "Is '%place%' a place in the UK?"
+; For real places: Text to shown when a new question is generate and the previous question was not solved.
+place_resolution.yes = "%place% is a real place!"
+; For fake places: Text to show when a new question is generated and the previous question was not solved.
+place_resolution.no = "%place% is NOT a real place!"
 
+
+; --------------------------
+; IGNORE THE TEXTS BELOW - They will be ignored in the next iteration
+; --------------------------
 ; If a place is a REAL place, what answers should we consider as correct? Comma-separated list of possibilities.
 real_place_possible_answers = "yes, y"
 ; Text to show as answer for real places in isolation (e.g. used in the web page's "Answer" column)
