Add texts for population/surface questions

--- a/texts.ini
+++ b/texts.ini
@@ -10,7 +10,15 @@ place_resolution.yes = "%place% is a real place!"
 ; For fake places: Text to show when a new question is generated and the previous question was not solved.
 place_resolution.no = "%place% is NOT a real place!"
 
+[countries]
+population_question = "Which country has more population, %country1% or %country2%?"
+population_resolution = "%country1% has more population than %country2%"
 
+surface_question = "Which country has a larger surface, %country1% or %country2%?"
+surface_resolution = "%country1% has more surface than %country2%"
+
+
+[deprecated]
 ; --------------------------
 ; IGNORE THE TEXTS BELOW - They will be ignored in the next iteration
 ; --------------------------
