--- a/texts.ini
+++ b/texts.ini
@@ -11,9 +11,11 @@ place_resolution.yes = "%place% is a real place!"
 place_resolution.no = "%place% is NOT a real place!"
 
 [countries]
+; Note: for the resolution texts, %country1% is always the answer, and %country2% is the other country of the question.
+; If you want, you can remove %country2% from the text. 
+
 population_question = "Which country has more population, %country1% or %country2%?"
 population_resolution = "%country1% has more population than %country2%"
-
 surface_question = "Which country has a larger surface, %country1% or %country2%?"
 surface_resolution = "%country1% has more surface than %country2%"
 
