Add punctuation to country resolution texts

--- a/texts.ini
+++ b/texts.ini
@@ -15,9 +15,9 @@ place_resolution.no = "%place% is NOT a real place!"
 ; If you want, you can remove %country2% from the text. 
 
 population_question = "Which country has more population, %country1% or %country2%?"
-population_resolution = "%country1% has more population than %country2%"
+population_resolution = "%country1% has more population than %country2%."
 surface_question = "Which country has a larger surface, %country1% or %country2%?"
-surface_resolution = "%country1% has more surface than %country2%"
+surface_resolution = "%country1% has more surface than %country2%."
 
 
 [deprecated]
